<resources>
    <string name="app_name">GeometryPhoto</string>

    <string name="camera">เปิดกล้อง</string>
    <string name="geometry_elearnning">รูปเรขาคณิต</string>
    <string name="formula_geometry">สูตรการหาพื้นที่</string>
    <string name="howto">วิธีใช้</string>
    <string name="exit">ออกจากโปรแกรม</string>

    <string name="square">สี่เหลี่ยม</string>
    <string name="triangle">สามเหลี่ยม</string>
    <string name="circle">วงกลม</string>
    <string name="title_activity_learn_shape">LearnShape</string>
    <string name="head1">1. เมื่อเริ่มเข้าหน้าเปิดกล้องแล้วการสแกนจะอยู่ในสถานะปิด</string>
    <string name="head2">เพราะฉะนั้นให้ทำการเปิดโดยการคลิกที่ปุ่มปิด</string>
    <string name="head3">จะทำการเข้าสู่สถานะแสกนรูปทันที (เปิด)</string>


    <string name="head4">2. และเมื่อกล้องจับรูปภาพได้ก็จะบอกเราทันที (สมมุติเมื่อเจอรูปสี่เหลี่ยม)</string>

    <string name="title_detail">ชื่อรูป</string>


</resources>
