<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toshihiro.geometryphotos.HowtoActivity"
    android:orientation="vertical"
    android:background="@color/my_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="วิธีใช้กล้อง"
        android:id="@+id/textView"
        android:textSize="@dimen/h1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:textColor="@color/nomal_font" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head1"
                android:id="@+id/textView2"
                android:textColor="@color/nomal_font" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/device1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:text="@string/head2"
                android:textColor="@color/nomal_font" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/device2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head3"
                android:id="@+id/textView5"
                android:textColor="@color/nomal_font" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head4"
                android:id="@+id/textView6"
                android:layout_marginTop="10dp"
                android:textColor="@color/nomal_font" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/process_rec" />
        </LinearLayout>


</LinearLayout>
</ScrollView>
